# ClawSentry

./: .gitignore  404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  publish.yml  rules-governance.yml
advanced/attack-patterns/: index.html
advanced/custom-adapter/: index.html
advanced/custom-analyzer/: index.html
advanced/custom-skills/: index.html
advanced/embedding-backend/: index.html
advanced/pattern-evolution/: index.html
advanced/rule-governance/: index.html
api/: api-coverage.json  api-validity.json  openapi.json
api/authentication/: index.html
api/decisions/: index.html
api/models-errors/: index.html
api/overview/: index.html
api/reference/: index.html
api/reporting/: index.html
api/validity-report/: index.html
api/webhooks/: index.html
benchmarks/: .gitignore  BENCHMARKS.md  README.md  RESULTS.md  RUNBOOK.md
benchmarks/scripts/: agentdog_atbench_clawsentry.py  framework_single_case_smoke.py  harbor_codex_setup_guard.py  skills_safety_bench_codex.sh
changelog/: index.html
cli/: index.html
configuration/detection-config/: index.html
configuration/env-vars/: index.html
configuration/llm-config/: index.html
configuration/policy-tuning/: index.html
dashboard/: index.html
decision-layers/l1-rules/: index.html
decision-layers/l2-semantic/: index.html
decision-layers/l3-advisory/: index.html
decision-layers/l3-agent/: index.html
decision-layers/post-action/: index.html
decision-layers/trajectory-analyzer/: index.html
demostation_projects/a3s_demo/: .clawsentry.env.example  .clawsentry.toml.example
docker/: .env.example  Dockerfile  docker-compose.yml  prometheus.yml
docker/grafana/: README.md
examples/: e2e_a3s_code.py  e2e_openclaw_enforcement.py  e2e_openclaw_real_monitor.py  e2e_real_gateway_verification.py  sample-events.jsonl
examples/ci/: rules-governance.yml
examples/clawsentry_quick_start/: 01_hello_gateway.py  02_first_decision.py  03_risk_dimensions.py  04_session_accumulation.py  05_fallback_degradation.py  06_l2_semantic_analysis.py  07_trajectory_and_reports.py  08_http_auth.py  README.md  _helpers.py  agent.hcl
getting-started/concepts/: index.html
homebrew/: clawsentry.rb
javascripts/: mathjax.js
scripts/: docs_api_inventory.py
search/: search_index.json
site-docs/: changelog.md  index.md
stylesheets/: clawsentry-docs.css
systemd/: clawsentry-gateway.service  gateway.env.example
(+283 files in other folders)
