[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clawsentry"
version = "0.5.13"
description = "AHP unified safety supervision framework for AI agent runtimes."
readme = "src/clawsentry/README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "ClawSentry Contributors"},
]
keywords = [
    "ai-safety",
    "agent-supervision",
    "llm-security",
    "runtime-monitor",
    "ahp",
    "policy-engine",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]

dependencies = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.23",
    "pydantic>=2.0",
    "PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/Elroyper/ClawSentry"
Documentation = "https://elroyper.github.io/ClawSentry/"
Repository = "https://github.com/Elroyper/ClawSentry"
Changelog = "https://github.com/Elroyper/ClawSentry/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/Elroyper/ClawSentry/issues"

[project.optional-dependencies]
llm = [
    "anthropic>=0.20",
    "openai>=1.10",
]
enforcement = [
    "websockets>=12.0,<16.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.24",
    "websockets>=12.0,<16.0",
]
metrics = [
    "prometheus_client>=0.20",
]
latch = []
all = [
    "clawsentry[llm]",
    "clawsentry[enforcement]",
    "clawsentry[dev]",
    "clawsentry[metrics]",
    "clawsentry[latch]",
]

[project.scripts]
clawsentry = "clawsentry.cli.main:main"
clawsentry-gateway = "clawsentry.gateway.server:main"
clawsentry-harness = "clawsentry.adapters.a3s_gateway_harness:main"
clawsentry-stack = "clawsentry.gateway.stack:main"

[tool.setuptools.package-data]
clawsentry = ["ui/dist/**", "gateway/skills/*.yaml", "gateway/attack_patterns.yaml", "gateway/evolved_patterns.yaml", "latch/assets/*"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["clawsentry*"]
exclude = ["clawsentry.tests*"]

[tool.pytest.ini_options]
testpaths = ["src/clawsentry/tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
